@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.vip.vjtools</groupId>
 	<artifactId>vjkit</artifactId>
-	<version>1.0.2-SNAPSHOT</version>
+	<version>1.0.5</version>
 	<packaging>jar</packaging>
 	<name>vjkit</name>
 	<description>VIP's core java libraries</description>
@@ -14,6 +14,7 @@
 		<slf4j.version>1.7.25</slf4j.version>
 		<logback.version>1.1.8</logback.version>
 		<dozer.version>5.5.1</dozer.version>
+		<jackson.version>2.8.6</jackson.version>
 		<junit.version>4.12</junit.version>
 		<assertj.version>2.6.0</assertj.version>
 		<mockito.version>2.18.3</mockito.version>
@@ -55,6 +56,14 @@
 			<optional>true</optional>
 		</dependency>
 
+		<!-- optional for JsonMapper -->
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+			<version>${jackson.version}</version>
+			<optional>true</optional>
+		</dependency>
+
 		<!-- Test -->
 		<dependency>
 			<groupId>junit</groupId>
@@ -81,6 +90,22 @@
 			<groupId>ch.qos.logback</groupId>
 			<artifactId>logback-classic</artifactId>
 			<version>${logback.version}</version>
+			<scope>test</scope>
+		</dependency>
+
+		<!-- only for XMLMapper test -->
+		<dependency>
+			<groupId>dom4j</groupId>
+			<artifactId>dom4j</artifactId>
+			<version>1.6.1</version>
+			<scope>test</scope>
+		</dependency>
+
+		<!-- only for XMLMapper test -->
+		<dependency>
+			<groupId>jaxen</groupId>
+			<artifactId>jaxen</artifactId>
+			<version>1.1.6</version>
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
@@ -127,9 +152,9 @@
 						<version>2.5.3</version>
 						<configuration>
 							<tagNameFormat>v.@{project.version}</tagNameFormat>
-						 </configuration>
+						</configuration>
 					</plugin>
-	
+
 					<plugin>
 						<groupId>org.apache.maven.plugins</groupId>
 						<artifactId>maven-gpg-plugin</artifactId>
@@ -180,6 +205,26 @@
 				</plugins>
 			</build>
 		</profile>
+
+		<profile>
+			<id>jdk9</id>
+			<activation>
+				<jdk>9</jdk>
+			</activation>
+			<build>
+				<plugins>
+					<!-- only for XMLMapper test -->
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-surefire-plugin</artifactId>
+						<version>2.22.0</version>
+						<configuration>
+							<argLine>--add-modules java.xml.bind</argLine>
+						</configuration>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
 	</profiles>
 
 	<distributionManagement>
@@ -207,7 +252,8 @@
 		<connection>scm:git:https://github.com/vipshop/vjtools.git</connection>
 		<developerConnection>scm:git:https://github.com/vipshop/vjtools.git</developerConnection>
 		<url>https://github.com/vipshop/vjtools</url>
-	</scm>
+	  <tag>v.1.0.2</tag>
+  </scm>
 
 	<developers>
 		<!--not noly me, write a name here just for sonatype requirement -->
